--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" type="module"></script>
+    <script src="./dist/app.js" type="module"></script>
+    <link rel="stylesheet" href="./dist/bundle.css">
+    <link rel="stylesheet" href="./static/global.css">
 </head>
 
 <body>
-    <h1>Hello gite</h1>
-    <h2>Hello GIT</h2>
-    <div class="wrapper">
-    </div>
+    <div id="root"></div>
 </body>
 
 </html>
